--- a/kinomart/user/templates/user/user_address.html
+++ b/kinomart/user/templates/user/user_address.html
@@ -33,7 +33,7 @@
           <h4>Hello {{user.first_name}}</h4>
             <ul class="list-group">
               <a href="{% url 'user_page' %}"><li class="list-group-item rounded-4">Profile</li></a>
-              <a href="{% url 'user_address' %}"><li class="list-group-item rounded-4">Shopping Address</li></a>
+              <a href="{% url 'user_address' %}"><li class="list-group-item rounded-4 active">Shopping Address</li></a>
               <a href="{% url 'order_history' %}"><li class="list-group-item rounded-4">Order History</li></a>
               <a href="{% url 'wishlist' %}"><li class="list-group-item rounded-4">My Wishlist</li></a>
               <a href="{% url 'cart' %}"><li class="list-group-item rounded-4">My Cart</li></a>
