--- a/kinomart/user/templates/user/wishlist.html
+++ b/kinomart/user/templates/user/wishlist.html
@@ -17,7 +17,7 @@
                 <a href="{% url 'user_page' %}"><li class="list-group-item rounded-4">Profile</li></a>
                 <a href="{% url 'user_address' %}"><li class="list-group-item rounded-4">Shopping Address</li></a>
                 <a href="{% url 'order_history' %}"><li class="list-group-item rounded-4">Order History</li></a>
-                <a href="{% url 'wishlist' %}"><li class="list-group-item rounded-4">My Wishlist</li></a>
+                <a href="{% url 'wishlist' %}"><li class="list-group-item rounded-4 active">My Wishlist</li></a>
                 <a href="{% url 'cart' %}"><li class="list-group-item rounded-4">My Cart</li></a>
                 <a href="{% url 'wallet' %}"><li class="list-group-item rounded-4">Wallet</li></a>
                 <a href="{% url 'logout_user' %}"><li class="list-group-item rounded-4">Log Out</li></a>
