--- a/kinomart/user/templates/user/cart.html
+++ b/kinomart/user/templates/user/cart.html
@@ -18,7 +18,7 @@
               <a href="{% url 'user_address' %}"><li class="list-group-item rounded-4">Shopping Address</li></a>
               <a href="{% url 'order_history' %}"><li class="list-group-item rounded-4">Order History</li></a>
               <a href="{% url 'wishlist' %}"><li class="list-group-item rounded-4">My Wishlist</li></a>
-              <a href="{% url 'cart' %}"><li class="list-group-item rounded-4">My Cart</li></a>
+              <a href="{% url 'cart' %}"><li class="list-group-item rounded-4 active">My Cart</li></a>
               <a href="{% url 'wallet' %}"><li class="list-group-item rounded-4">Wallet</li></a>
               <a href="{% url 'logout_user' %}"><li class="list-group-item rounded-4">Log Out</li></a>
             </ul>
@@ -163,7 +163,7 @@
 
 
 
-<!-- model for checkout -->
+<!-- modal for checkout -->
 <div class="modal fade" id="checkout" tabindex="-1" role="dialog" aria-labelledby="checkoutLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
       <div class="modal-content">
