--- a/kinomart/user/templates/user/user_profile.html
+++ b/kinomart/user/templates/user/user_profile.html
@@ -14,7 +14,7 @@
         <div class="col-md-2 bg-light p-4 ms-4 rounded shadow" style="height: 400px;">
             <h4>Hello {{user.first_name}}</h4>
               <ul class="list-group">
-                <a href="{% url 'user_page' %}"><li class="list-group-item rounded-4">Profile</li></a>
+                <a href="{% url 'user_page' %}"><li class="list-group-item rounded-4 active">Profile</li></a>
                 <a href="{% url 'user_address' %}"><li class="list-group-item rounded-4">Shopping Address</li></a>
                 <a href="{% url 'order_history' %}"><li class="list-group-item rounded-4">Order History</li></a>
                 <a href="{% url 'wishlist' %}"><li class="list-group-item rounded-4">My Wishlist</li></a>
