--- a/kinomart/user/templates/user/wallet.html
+++ b/kinomart/user/templates/user/wallet.html
@@ -19,12 +19,21 @@
                 <a href="{% url 'order_history' %}"><li class="list-group-item rounded-4">Order History</li></a>
                 <a href="{% url 'wishlist' %}"><li class="list-group-item rounded-4">My Wishlist</li></a>
                 <a href="{% url 'cart' %}"><li class="list-group-item rounded-4">My Cart</li></a>
-                <a href="{% url 'wallet' %}"><li class="list-group-item rounded-4">Wallet</li></a>
+                <a href="{% url 'wallet' %}"><li class="list-group-item rounded-4 active">Wallet</li></a>
                 <a href="{% url 'logout_user' %}"><li class="list-group-item rounded-4">Log Out</li></a>
               </ul>
           </div>
         <!-- Main Content -->
         <div class="col-md-9">
+          {% if messages %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {% for message in messages %}
+           {{message}}
+
+        {% endfor %}
+       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+     </div>
+     {% endif %}
             <div class="row">
                 <div class="col-md-6 offset-md-3 ">
                     <div class="bg-light rounded shadow">
