--- a/kinomart/admin/templates/admin/index_admin.html
+++ b/kinomart/admin/templates/admin/index_admin.html
@@ -48,15 +48,30 @@
                         </div>
 
 
-
+                        <p>
+                            {{data}}
+                            {{label}}
+                        </p>
                         <div class="row">
+                            <div class=" col-md-8 offset-md-2">
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        <i class="fas fa-chart-area me-1"></i>
+                                        Order Chart
+                                    </div>
+                                    <div class="card-body"><canvas id="myChart" width="100%" height="40"></canvas></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            
                             <div class="col-xl-6">
                                 <div class="card mb-4">
                                     <div class="card-header">
                                         <i class="fas fa-chart-area me-1"></i>
-                                        Area Chart Example
+                                        Area Chart Order
                                     </div>
-                                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                                    <div class="card-body"><canvas id="order-chart-area" width="100%" height="40"></canvas></div>
                                 </div>
                             </div>
                             <div class="col-xl-6">
@@ -71,6 +86,112 @@
                         </div>
                         
                     </div>
-                
+              
+                    
+                    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+                                        
+<script>
+   $(document).ready(function(){
+    
+  const ctx = document.getElementById('myChart');
+
+  new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: {{label|safe}},
+      datasets: [{
+        label: 'Order count',
+        data: {{data|safe}},
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+
+
+
+
+
+
+   })
+
+
+   $(document).ready(function(){
+    
+
+
+    // Set new default font family and font color to mimic Bootstrap's default styling
+Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+Chart.defaults.global.defaultFontColor = '#292b2c';
+
+// Area Chart Example
+var ctx = document.getElementById("order-chart-area");
+var myLineChart = new Chart(ctx, {
+  type: 'line',
+  data: {
+    labels: {{label|safe}},
+    datasets: [{
+      label: "Count",
+      lineTension: 0.3,
+      backgroundColor: "rgba(2,117,216,0.2)",
+      borderColor: "rgba(2,117,216,1)",
+      pointRadius: 5,
+      pointBackgroundColor: "rgba(2,117,216,1)",
+      pointBorderColor: "rgba(255,255,255,0.8)",
+      pointHoverRadius: 5,
+      pointHoverBackgroundColor: "rgba(2,117,216,1)",
+      pointHitRadius: 50,
+      pointBorderWidth: 2,
+      data: {{data|safe}},
+    }],
+  },
+  options: {
+    scales: {
+      xAxes: [{
+        time: {
+          unit: 'date'
+        },
+        gridLines: {
+          display: false
+        },
+        ticks: {
+          maxTicksLimit: 7
+        }
+      }],
+      yAxes: [{
+        ticks: {
+          min: 0,
+          max: 40,
+          maxTicksLimit: 5
+        },
+        gridLines: {
+          color: "rgba(0, 0, 0, .125)",
+        }
+      }],
+    },
+    legend: {
+      display: false
+    }
+  }
+});
+
+
+
+
+
+
+   })
+
+
+
+ 
+
+</script>
                     {% endblock %}
