--- a/kinomart/admin/templates/admin/index_admin.html
+++ b/kinomart/admin/templates/admin/index_admin.html
@@ -6,7 +6,7 @@
                     <div class="container-fluid px-4">
                         <h1 class="mt-4">Dashboard</h1>
                         <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active">Dashboard</li>
+                            <li class="breadcrumb-item active"></li>
                         </ol>
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
@@ -48,16 +48,49 @@
                         </div>
 
 
-                        <p>
-                            {{data_revenue}}
-                            {{label}}
-                        </p>
+                        <div class="row p-4 ">
+                            <div class="col-xl-3 col-md-4">
+                              <div class="card bg-secondary text-white mb-4">
+                                  <div class="card-body">sample 1</div>
+                                  
+                              </div>
+                            </div>
+
+                            <div class="col-xl-3 col-md-4">
+                              <div class="card bg-secondary text-white mb-4">
+                                  <div class="card-body">sample 2</div>
+                                  
+                              </div>
+                            </div>
+
+                            <div class="col-xl-3 col-md-4">
+                              <div class="card bg-secondary text-white mb-4">
+                                  <div class="card-body">sample 3</div>
+                                  
+                              </div>
+                            </div>
+
+                            <div class="col-xl-3 col-md-4">
+                              <div class="card bg-secondary text-white mb-4">
+                                  <div class="card-body">sample 1</div>
+                                  
+                              </div>
+                            </div>
+
+                            <div class="col-xl-3 col-md-4">
+                              <div class="card bg-secondary text-white mb-4">
+                                  <div class="card-body">sample 1</div>
+                                  
+                              </div>
+                            </div>
+
+                        </div>
                         
                         <div class="row mt-4 ">
 
                           
 
-                            <div class="col-md-2 bg-light p-1  rounded shadow" style="height: 400px;">
+                            <div class="col-md-2 bg-light p-1  rounded shadow" style="height: auto;">
                                 <ul class="list-group">
                                   <button class="btn rounded-4 "><li class="list-group-item active" data-range="10">Last 10 Days</li></button>
                                   <button class="btn rounded-4"><li class="list-group-item" data-range="week">Last Week</li></button>
@@ -88,6 +121,20 @@
                                     <div class="card-body"><canvas id="myChart" width="100%" height="40"></canvas></div>
                                 </div>
                             </div>
+
+                            <!-- <div class="col-md-2 bg-light p-1  rounded shadow" style="height: auto;">
+                              <ul class="list-group">
+                                <button class="btn rounded-4 "><li class="list-group-item active" data-range="10">Last 10 Days</li></button>
+                                <button class="btn rounded-4"><li class="list-group-item" data-range="week">Last Week</li></button>
+                                <button class="btn rounded-4"><li class="list-group-item" data-range="month">Last Month</li></button>
+                                <button class="btn rounded-4"><li class="list-group-item"data-range="year">Last Year</li></button>
+                                
+                                
+                              </ul>
+                            </div> -->
+
+
+
                         </div>
 
                         <div class="row">
