Best selling added. made some changes

--- a/kinomart/admin/templates/admin/index_admin.html
+++ b/kinomart/admin/templates/admin/index_admin.html
@@ -4,7 +4,7 @@
 
                 {% block content %}
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">Dashboard</h1>
+                        <h1 class="mt-4 text-success"><i class="fa-solid fa-chart-line"></i> Dashboard</h1>
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item active"></li>
                         </ol>
@@ -112,10 +112,10 @@
 
                             <div class="col-md-2 bg-light p-1  rounded shadow" style="height: auto;">
                                 <ul class="list-group">
-                                  <button class="btn rounded-4 "><li class="list-group-item active chart-button" data-range="10">Last 10 Days</li></button>
-                                  <button class="btn rounded-4"><li class="list-group-item chart-button" data-range="week">Last Week</li></button>
-                                  <button class="btn rounded-4"><li class="list-group-item chart-button" data-range="month">Last Month</li></button>
-                                  <button class="btn rounded-4"><li class="list-group-item chart-button"data-range="year">Last Year</li></button>
+                                  <button class="btn  rounded-4 "><li class="list-group-item list-group-item-success  active chart-button" data-range="10">Last 10 Days</li></button>
+                                  <button class="btn rounded-4"><li class="list-group-item list-group-item-success chart-button" data-range="week">Last Week</li></button>
+                                  <button class="btn rounded-4"><li class="list-group-item list-group-item-success chart-button" data-range="month">Last Month</li></button>
+                                  <button class="btn rounded-4"><li class="list-group-item list-group-item-success chart-button"data-range="year">Last Year</li></button>
                                   
                                   
                                 </ul>
@@ -144,9 +144,9 @@
 
                             <div class="col-md-2 bg-light p-1  rounded shadow" style="height: auto;">
                               <ul class="list-group">
-                                <button class="btn rounded-4 "><li class="top-selling list-group-item" data-select="product">Top Selling Product</li></button>
-                                <button class="btn rounded-4"><li class="top-selling list-group-item" data-select="category">Top Selling Category</li></button>
-                                <button class="btn rounded-4"><li class="top-selling list-group-item" data-select="brand">Top Selling Brand</li></button>
+                                <button class="btn rounded-4 "><li class="top-selling list-group-item list-group-item-danger" data-select="product">Top Selling Product</li></button>
+                                <button class="btn rounded-4"><li class="top-selling list-group-item list-group-item-danger" data-select="category">Top Selling Category</li></button>
+                                <button class="btn rounded-4"><li class="top-selling list-group-item list-group-item-danger" data-select="brand">Top Selling Brand</li></button>
                                 
                                 
                               </ul>
