--- a/kinomart/user/templates/user/user_profile.html
+++ b/kinomart/user/templates/user/user_profile.html
@@ -67,6 +67,8 @@
                           <hr>
                           <div class="mb-3">
                             <label for="" class="form-label">Refferal Code:</label>
+              <p style="font-size: smaller; color: rgb(78, 160, 53);">Use this code to signup new user. You both will get ₹100</p>
+
                             <input type="text" id="" class="form-control" value="{{ user.referral_code }}">
                           </div>
 
