--- a/kinomart/user/templates/user/order_history.html
+++ b/kinomart/user/templates/user/order_history.html
@@ -57,7 +57,10 @@
                     <p>Payment Method: {{ order.payment_method }}</p>
                     
                     <!-- <p>Delivery Instructions: {{ order.delivery_instructions }}</p> -->
-                    {% if order.status == 'Pending' %}
+                    {% if order.status == 'Cancel' %}
+                    <p>Status: <span style="color: rgb(245, 3, 3);">Cancelled by admin</span></p>
+
+                    {% elif order.status == 'Pending' %}
                     {% if not order.return_status %}
                     <p>Status: <span style="color: rgb(167, 167, 3);">{{ order.status }}</span>
 
