--- a/kinomart/user/templates/user/login.html
+++ b/kinomart/user/templates/user/login.html
@@ -48,13 +48,13 @@
             <span class="text-danger" style="display: none;" id="min-len2">Enter aleast 4 Characters</span>
             <span class="text-danger" style="display: none;" id="req2">* This is required field</span>
             <input type="password" class="form-control" id="password" name="password" >
-            <a href="#">Forgot Password</a>
+            <a href="{% url 'forgot_password' %}">Forgot Password</a>
           </div>
 
         
          
 
-        <br><div class="d-flex justify-content-center"><button type="submit" class="btn btn-secondary">Submit</button></div>
+        <br><div class="d-flex justify-content-center"><button type="submit" class="btn btn-secondary">Login</button></div>
         
 <br><br>
         <p>If you don't have an account <br> You can <a href="{% url 'signup' %}">Register Here</a></p>
