made some changes in edit product

--- a/kinomart/admin/templates/admin/edit_categories.html
+++ b/kinomart/admin/templates/admin/edit_categories.html
@@ -182,7 +182,7 @@
                                     <input type="radio"  id="choice02" name="is_offer" value="False" onclick="hideOffer()" checked > 
                                 </div>
                                 <div class="mb-1 offer_dropdown"  style="display: none;">
-                                    <label for="choice1" class="form-label">Select the offer</label>
+                                    <label for="offer_select" class="form-label">Select the offer</label>
                     
                                     <select name="offer_select" id="">
                                         {% for offer in offers %}
