.env file added. settings changed

--- a/kinomart/user/templates/user/otp_forgot_password.html
+++ b/kinomart/user/templates/user/otp_forgot_password.html
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
     <div class="col-md-1"></div>
-<div class="col-md-4 bg-white rounded-4 mt-5 p-3">
+<div class="col-md-4 bg-white rounded-4 mt-5 p-3" >
   
   
 
@@ -22,9 +22,9 @@
      </div>
      {% endif %}
 
-     <p>OTP send sussecfully to <span style="color: #679d06;">{{email}}</span></p>
+     <p>OTP send successful to <span style="color: #679d06;">{{email}}</span></p>
 
-    <form action="{% url 'otp_check_forgot_password' %}" method="post">
+    <form action="{% url 'otp_check_forgot_password' %}" method="post" style="padding:0 80px 0 80px;">
         {% csrf_token %}
         <div class="mb-1">
           
