--- a/kinomart/admin/templates/admin/sales_report.html
+++ b/kinomart/admin/templates/admin/sales_report.html
@@ -1,8 +1,8 @@
 <h3 style="text-align: center;"> Sales Report </h3>
 <h6 style="text-align: center;">{{from_date}} to {{to_date}}</h6>
 {% if range == 'custom' %}
-<a href="/admin/sales_report/{{from_date}}/{{to_date}}">Download CSV</a><br>
-<a href="/admin/sales_report_pdf/{{from_date}}/{{to_date}}">Download PDF</a>
+<!-- <a href="/admin/sales_report/{{from_date}}/{{to_date}}">Download CSV</a><br>
+<a href="/admin/sales_report_pdf/{{from_date}}/{{to_date}}">Download PDF</a> -->
 
 {% else %}
 
